--- a/Promotional_Offer_Strategy_Recommendations.ipynb
+++ b/Promotional_Offer_Strategy_Recommendations.ipynb
@@ -50,7 +50,7 @@
         "id": "JCeRRo_MCDD2"
       },
       "source": [
-        "Starbukcs là một chuỗi cửa hàng cà phê quốc tế có trụ sở tại Seattle, Washington, Hoa Kỳ. Được thành lập vào năm 1971, Starbucks hiện nay là một trong những thương hiệu nổi tiếng trên thế giới trong lĩnh vực F&B.\n",
+        "Starbucks là một chuỗi cửa hàng cà phê quốc tế có trụ sở tại Seattle, Washington, Hoa Kỳ. Được thành lập vào năm 1971, Starbucks hiện nay là một trong những thương hiệu nổi tiếng trên thế giới trong lĩnh vực F&B.\n",
         "\n",
         "Các nhóm đối tượng khách hàng mà Starbucks hướng đến khá rộng lớn, bao gồm sinh viên, nhân viên, v.v thậm chí gồm những người yêu thích không gian thoải mái để thư giãn và làm việc. Chính vì lý do đó, ngoài việc tập trung phát triển vào việc bán các mặt hàng thức uống và đồ ăn, Starbucks còn xây dựng mô hình kinh doanh tập trung vào các trải nghiệm khách hàng.\n",
         "\n",
